# dir-type

./: .dir-lint.yaml  .dir-type.yaml  .gitignore  .type-dir.yaml  Cargo.toml  LICENSE  README.md  prek.toml
dir-lint-cli/: Cargo.toml
dir-lint-cli/src/: handler.rs  lib.rs  main.rs
dir-lint-cli/src/feature/: report.rs
dir-lint-cli/src/feature/report/: print_errors.rs  print_parse_error.rs  reportable.rs  to_json.rs
dir-lint-cli/src/handler/: run_check.rs
dir-lint-cli/tests/: all_tutorials.rs
dir-lint-expr/: Cargo.toml
dir-lint-expr/src/: config_expr.rs  config_source.rs  expr.rs  expr_entry.rs  expr_pattern.rs  expr_rule.rs  lib.rs  quant.rs  use_group.rs  yaml_config_source.rs
dir-lint-expr/src/expr/: check.rs  compile.rs
dir-lint-expr/src/expr/check/: check_config_expr.rs  cycle_splice.rs  internal.rs
dir-lint-expr/src/expr/compile/: count.rs  entry.rs  matcher.rs  pattern.rs  rule.rs
dir-lint-expr/src/expr/compile_tests/: helpers.rs  test_any_of_bare_rule_references_become_splice_alternatives.rs  test_dir_entry_with_colocated_rule_returns_err.rs  test_duplicate_id_across_sibling_dirs_returns_err.rs  (+7 more)
dir-lint-expr/src/quant_tests/: test_at_least_produces_unbounded_interval.rs  test_default_is_not_explicit.rs  test_default_is_not_relaxed.rs  test_default_relaxed_with_structural_max_none.rs  test_default_relaxed_with_structural_max_some1.rs  test_default_with_structural_max_none.rs  test_default_with_structural_max_some1.rs  test_exactly_produces_symmetric_interval.rs  test_explicit_already_relaxed_is_idempotent.rs  test_explicit_ignores_structural_max.rs  test_explicit_is_explicit.rs  test_explicit_min0_is_relaxed.rs  test_explicit_min1_is_not_relaxed.rs  test_explicit_relaxed_zeroes_min_keeps_max.rs  test_interval_contains_exact_n.rs  test_interval_contains_unbounded_max.rs  test_interval_contains_within_range.rs  test_interval_contains_zero_only.rs  test_relax_min_unbounded_stays_unbounded.rs  test_relax_min_zeroes_lower_bound.rs
dir-lint-expr/src/ref_path_tests/: dir_hop.rs  file_hop.rs
dir-lint-runtime/: Cargo.toml
dir-lint-runtime-impl/: Cargo.toml
dir-lint-runtime-impl/src/: check_dir.rs  checker_impl.rs  enforce.rs  env.rs  lib.rs  name_matcher.rs  record_map.rs  ref_resolve.rs  template.rs  visible_ids.rs
dir-lint-runtime-impl/src/check_dir_tests/: test_bare_dir_requires_empty.rs  test_check_dir_records_dir_trace.rs  test_multi_instance_no_bleed_detects_foreign.rs  test_optional_splice_relax_does_not_leak_into_child.rs  test_splice_target_cannot_reference_caller_sibling_id.rs  tests.rs
dir-lint-runtime-impl/src/enforce/: candidate.rs  content_choice.rs  eval.rs  expand.rs  fixtures.rs  matcher.rs  memo.rs  required.rs  with.rs
dir-lint-runtime-impl/src/env_tests/: test_lex_priority.rs  test_same_name_value_and_for_coexist.rs  test_sets_fallback.rs
dir-lint-runtime-impl/src/ref_resolve_tests/: test_resolve_chain_dir_then_dir.rs  test_resolve_chain_field_returns_none.rs  test_resolve_chain_flatten_over_set.rs  test_resolve_chain_regex_zero_is_whole_match.rs  test_resolve_chain_two_dir_then_regex.rs
dir-lint-runtime-impl/src/template_tests/: test_resolve_template_dotted_reference_stays_literal.rs  test_resolve_template_record_field_reference.rs  test_resolve_template_record_main_value_is_whole.rs  test_resolve_template_scalar_only.rs  test_substitute_leaves_id_dot_var.rs  test_substitute_leaves_unknown_var.rs  test_substitute_multiple_vars.rs  test_substitute_no_placeholders.rs  test_substitute_regex_literal_escapes_value_only.rs  test_substitute_regex_literal_simple_value_unchanged.rs  test_substitute_replaces_known_var.rs
dir-lint-runtime/src/: checker.rs  lib.rs
dir-lint-walk-impl/: Cargo.toml
dir-lint-walk-impl/src/: lib.rs  read_dir_tree.rs  real_dir_tree_source.rs
dir-lint-walk-impl/src/read_dir_tree_tests/: fixtures.rs  test_anchored_path_skips_only_that_path.rs  test_config_globs_and_gitignore_combined.rs  test_double_star_target_is_skipped.rs  test_gitignore_negation_reinclude.rs  test_nested_gitignore_skips_grandchild.rs  test_permission_denied_includes_path.rs  test_root_gitignore_skips_dir.rs
dir-lint-yaml/: Cargo.toml
dir-lint-yaml/src/: config.rs  lib.rs  with_shape.rs
dir-lint-yaml/src/config/: load_yaml_config.rs  span_index.rs  yaml_config.rs  yaml_entry.rs  yaml_pattern.rs  yaml_rule.rs  yaml_with_shape.rs
(+465 files in other folders)
