[package]
name = "dir-lint-cli"
edition.workspace = true
rust-version.workspace = true
version.workspace = true
publish = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[[bin]]
name = "dir-lint"
path = "src/main.rs"

[dependencies]
dir-lint-yaml = { workspace = true }
dir-lint-expr = { workspace = true }
dir-lint-error = { workspace = true }
dir-lint-walk = { workspace = true }
dir-lint-walk-impl = { workspace = true }
dir-lint-runtime = { workspace = true }
dir-lint-runtime-impl = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
codespan-reporting = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
assert_cmd = { workspace = true }
