[package]
name = "dir-lint-expr"
edition.workspace = true
rust-version.workspace = true
version.workspace = true
publish.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
dir-lint-error = { workspace = true }
dir-lint-yaml = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
indexmap = { workspace = true }

[dev-dependencies]
indoc = { workspace = true }
serde_yaml = { workspace = true }
