[package]
name = "dir-lint-runtime-impl"
edition.workspace = true
rust-version.workspace = true
version.workspace = true
publish.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
dir-lint-runtime = { workspace = true }
dir-lint-error = { workspace = true }
dir-lint-yaml = { workspace = true }
dir-lint-expr = { workspace = true }
dir-lint-walk = { workspace = true }
indexmap = { workspace = true }
rayon = { workspace = true }
regex = { workspace = true }

[dev-dependencies]
serde_yaml = { workspace = true }
indoc = { workspace = true }
