[package]
name = "dir-lint-runtime"
edition.workspace = true
rust-version.workspace = true
version.workspace = true
publish.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
dir-lint-expr = { workspace = true }
dir-lint-error = { workspace = true }
dir-lint-walk = { workspace = true }
