[package]
name = "dir-lint-walk-impl"
edition.workspace = true
rust-version.workspace = true
version.workspace = true
publish.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
dir-lint-walk = { workspace = true }
anyhow = { workspace = true }
ignore = { workspace = true }
