[package]
name = "dir-lint-yaml"
edition.workspace = true
rust-version.workspace = true
version.workspace = true
publish.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
dir-lint-error = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_yaml = { workspace = true }
serde_path_to_error = { workspace = true }
indexmap = { workspace = true }
marked-yaml = { workspace = true }

[dev-dependencies]
indoc = { workspace = true }
